public class Cache
{
    //TAG





    //LAYER
    public const string Layer_Character  = "Character";






    //ANIM STRING
    public const string Anim_Idle = "Idle";
    public const string Anim_Run = "Run";
    public const string Anim_Attack = "Attack";
    public const string Anim_Dead = "Dead";
    public const string Anim_Dance_Win = "Dance_Win";
}
