public class Constant
{
    //TAG
    public const string Tag_Player = "Player";
    public const string Tag_Enemy = "Enemy";





    //LAYER
    public const string Layer_Character  = "Character";
    public const string Layer_Default = "Default";





    //ANIM STRING
    public const string Anim_Idle = "Idle";
    public const string Anim_Run = "Run";
    public const string Anim_Attack = "Attack";
    public const string Anim_Dead = "Dead";
    public const string Anim_Dance_Win = "Dance_Win";
}
